// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Available Algorithms component when there are algorithms should display one algorithm enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM eFzUpx"
  >
    <div
      class="algorithms horizontal "
    >
      <span
        class="algorithm disabled "
      >
        Dummy algo
      </span>
      <span
        class="algorithm enabled "
      >
        Dummy algo2
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Available Algorithms component when there are algorithms should display one algorithm selected 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM eFzUpx"
  >
    <div
      class="algorithms horizontal "
    >
      <span
        class="algorithm disabled "
      >
        Dummy algo
      </span>
      <span
        class="algorithm enabled selected"
      >
        Dummy algo2
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Available Algorithms component when there is no algorithm should display nothing 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM eFzUpx"
  >
    <div
      class="algorithms horizontal "
    />
  </div>
</DocumentFragment>
`;
